--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -342,6 +342,13 @@
         </div>
         <!-- header section end-->
         {% block content %}{% endblock %}
+
+
+        <footer>
+            2015-2020 &copy; 天天进货 ttjinhuo.com
+        </footer>
+        <!--footer section end-->
+    </div>
     <!-- main content end-->
 </section>
 
