--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -12,20 +12,20 @@
   <title>天天进货</title>
 
   <!--icheck-->
-  <link href="js/iCheck/skins/minimal/minimal.css" rel="stylesheet">
-  <link href="js/iCheck/skins/square/square.css" rel="stylesheet">
-  <link href="js/iCheck/skins/square/red.css" rel="stylesheet">
-  <link href="js/iCheck/skins/square/blue.css" rel="stylesheet">
+  <link href="/js/iCheck/skins/minimal/minimal.css" rel="stylesheet">
+  <link href="/js/iCheck/skins/square/square.css" rel="stylesheet">
+  <link href="/js/iCheck/skins/square/red.css" rel="stylesheet">
+  <link href="/js/iCheck/skins/square/blue.css" rel="stylesheet">
 
   <!--dashboard calendar-->
-  <link href="css/clndr.css" rel="stylesheet">
+  <link href="/css/clndr.css" rel="stylesheet">
 
   <!--Morris Chart CSS -->
-  <link rel="stylesheet" href="js/morris-chart/morris.css">
+  <link rel="stylesheet" href="/js/morris-chart/morris.css">
 
   <!--common-->
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
+  <link href="/css/style-responsive.css" rel="stylesheet">
 
 
 
@@ -45,11 +45,11 @@
 
         <!--logo and iconic logo start-->
         <div class="logo">
-            <a href="/"><img src="images/logo.png" alt=""></a>
+            <a href="/"><img src="/images/logo.png" alt=""></a>
         </div>
 
         <div class="logo-icon text-center">
-            <a href="/"><img src="images/logo_icon.png" alt=""></a>
+            <a href="/"><img src="/images/logo_icon.png" alt=""></a>
         </div>
         <!--logo and iconic logo end-->
 
@@ -58,7 +58,7 @@
             <!-- visible to small devices only -->
             <div class="visible-xs hidden-sm hidden-md hidden-lg">
                 <div class="media logged-user">
-                    <img alt="" src="images/photos/user-avatar.png" class="media-object">
+                    <img alt="" src="/images/photos/user-avatar.png" class="media-object">
                     <div class="media-body">
                         <h4><a href="#">管理员</a></h4>
                         <span>"Hello There..."</span>
@@ -75,7 +75,7 @@
 
             <!--sidebar nav start-->
             <ul class="nav nav-pills nav-stacked custom-nav">
-                <li class="active"><a href="index.html"><i class="fa fa-home"></i> <span>控制台</span></a></li>
+                <li class="active"><a href="/"><i class="fa fa-home"></i> <span>控制台</span></a></li>
                 <li class="menu-list"><a href=""><i class="fa fa-laptop"></i> <span>用户管理</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="blank_page.html"> Blank Page</a></li>
@@ -235,7 +235,7 @@
                             <ul class="dropdown-list normal-list">
                                 <li class="new">
                                     <a href="">
-                                        <span class="thumb"><img src="images/photos/user1.png" alt="" /></span>
+                                        <span class="thumb"><img src="/images/photos/user1.png" alt="" /></span>
                                         <span class="desc">
                                           <span class="name">John Doe <span class="badge badge-success">new</span></span>
                                           <span class="msg">Lorem ipsum dolor sit amet...</span>
@@ -244,7 +244,7 @@
                                 </li>
                                 <li>
                                     <a href="">
-                                        <span class="thumb"><img src="images/photos/user2.png" alt="" /></span>
+                                        <span class="thumb"><img src="/images/photos/user2.png" alt="" /></span>
                                         <span class="desc">
                                           <span class="name">Jonathan Smith</span>
                                           <span class="msg">Lorem ipsum dolor sit amet...</span>
@@ -253,7 +253,7 @@
                                 </li>
                                 <li>
                                     <a href="">
-                                        <span class="thumb"><img src="images/photos/user3.png" alt="" /></span>
+                                        <span class="thumb"><img src="/images/photos/user3.png" alt="" /></span>
                                         <span class="desc">
                                           <span class="name">Jane Doe</span>
                                           <span class="msg">Lorem ipsum dolor sit amet...</span>
@@ -262,7 +262,7 @@
                                 </li>
                                 <li>
                                     <a href="">
-                                        <span class="thumb"><img src="images/photos/user4.png" alt="" /></span>
+                                        <span class="thumb"><img src="/images/photos/user4.png" alt="" /></span>
                                         <span class="desc">
                                           <span class="name">Mark Henry</span>
                                           <span class="msg">Lorem ipsum dolor sit amet...</span>
@@ -271,7 +271,7 @@
                                 </li>
                                 <li>
                                     <a href="">
-                                        <span class="thumb"><img src="images/photos/user5.png" alt="" /></span>
+                                        <span class="thumb"><img src="/images/photos/user5.png" alt="" /></span>
                                         <span class="desc">
                                           <span class="name">Jim Doe</span>
                                           <span class="msg">Lorem ipsum dolor sit amet...</span>
@@ -324,7 +324,7 @@
                     </li>
                     <li>
                         <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                            <img src="images/photos/user-avatar.png" alt="" />
+                            <img src="/images/photos/user-avatar.png" alt="" />
                             John Doe
                             <span class="caret"></span>
                         </a>
@@ -353,46 +353,46 @@
 </section>
 
 <!-- Placed js at the end of the document so the pages load faster -->
-<script src="js/jquery-1.10.2.min.js"></script>
-<script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-<script src="js/jquery-migrate-1.2.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/modernizr.min.js"></script>
-<script src="js/jquery.nicescroll.js"></script>
+<script src="/js/jquery-1.10.2.min.js"></script>
+<script src="/js/jquery-ui-1.9.2.custom.min.js"></script>
+<script src="/js/jquery-migrate-1.2.1.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/modernizr.min.js"></script>
+<script src="/js/jquery.nicescroll.js"></script>
 
 <!--easy pie chart-->
-<script src="js/easypiechart/jquery.easypiechart.js"></script>
-<script src="js/easypiechart/easypiechart-init.js"></script>
+<script src="/js/easypiechart/jquery.easypiechart.js"></script>
+<script src="/js/easypiechart/easypiechart-init.js"></script>
 
 <!--Sparkline Chart-->
-<script src="js/sparkline/jquery.sparkline.js"></script>
-<script src="js/sparkline/sparkline-init.js"></script>
+<script src="/js/sparkline/jquery.sparkline.js"></script>
+<script src="/js/sparkline/sparkline-init.js"></script>
 
 <!--icheck -->
-<script src="js/iCheck/jquery.icheck.js"></script>
-<script src="js/icheck-init.js"></script>
+<script src="/js/iCheck/jquery.icheck.js"></script>
+<script src="/js/icheck-init.js"></script>
 
 <!-- jQuery Flot Chart-->
-<script src="js/flot-chart/jquery.flot.js"></script>
-<script src="js/flot-chart/jquery.flot.tooltip.js"></script>
-<script src="js/flot-chart/jquery.flot.resize.js"></script>
+<script src="/js/flot-chart/jquery.flot.js"></script>
+<script src="/js/flot-chart/jquery.flot.tooltip.js"></script>
+<script src="/js/flot-chart/jquery.flot.resize.js"></script>
 
 
 <!--Morris Chart-->
-<script src="js/morris-chart/morris.js"></script>
-<script src="js/morris-chart/raphael-min.js"></script>
+<script src="/js/morris-chart/morris.js"></script>
+<script src="/js/morris-chart/raphael-min.js"></script>
 
 <!--Calendar-->
-<script src="js/calendar/clndr.js"></script>
-<script src="js/calendar/evnt.calendar.init.js"></script>
-<script src="js/calendar/moment-2.2.1.js"></script>
-<script src="js/underscore.min.js"></script>
+<script src="/js/calendar/clndr.js"></script>
+<script src="/js/calendar/evnt.calendar.init.js"></script>
+<script src="/js/calendar/moment-2.2.1.js"></script>
+<script src="/js/underscore.min.js"></script>
 
 <!--common scripts for all pages-->
-<script src="js/scripts.js"></script>
+<script src="/js/scripts.js"></script>
 
 <!--Dashboard Charts-->
-<script src="js/dashboard-chart-init.js"></script>
+<script src="/js/dashboard-chart-init.js"></script>
 
 
 </body>
