--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -379,8 +379,8 @@
 
 
 <!--Morris Chart-->
-<script src="/js/morris-chart/morris.js"></script>
-<script src="/js/morris-chart/raphael-min.js"></script>
+<!-- <script src="/js/morris-chart/morris.js"></script>
+<script src="/js/morris-chart/raphael-min.js"></script> -->
 
 <!--Calendar-->
 <script src="/js/calendar/clndr.js"></script>
@@ -392,7 +392,7 @@
 <script src="/js/scripts.js"></script>
 
 <!--Dashboard Charts-->
-<script src="/js/dashboard-chart-init.js"></script>
+<!-- <script src="/js/dashboard-chart-init.js"></script> -->
 
 
 </body>
