--- a/views/modules/detail.html
+++ b/views/modules/detail.html
@@ -17,10 +17,34 @@
 
     <!--body wrapper start-->
     <div class="wrapper">
-        
+        <div class="row">
+            <div class="col-lg-12">
+                <section class="panel">
+                    <header class="panel-heading">
+                        内容
+                        <span class="tools pull-right">
+                            <a class="fa fa-chevron-down" href="javascript:;"></a>
+                            <a class="fa fa-times" href="javascript:;"></a>
+                         </span>
+                    </header>
+                    <div class="panel-body">
+                        <div class="form">
+                            <form action="#" class="form-horizontal">
+                                <div class="form-group">
+                                    <div class="col-sm-12">
+                                        <textarea class="form-control ckeditor" name="editor1" rows="6"></textarea>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
     </div>
     <!--body wrapper end-->
 
     <!--footer section start-->
 
 {% endblock %}
+<script type="text/javascript" src="/js/ckeditor/ckeditor.js"></script>
