--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -61,7 +61,7 @@
                     <img alt="" src="/images/photos/user-avatar.png" class="media-object">
                     <div class="media-body">
                         <h4><a href="#">管理员</a></h4>
-                        <span>"Hello There..."</span>
+                        <span>上次登录时间: </span>
                     </div>
                 </div>
 
@@ -78,53 +78,36 @@
                 <li class="active"><a href="/"><i class="fa fa-home"></i> <span>控制台</span></a></li>
                 <li class="menu-list"><a href=""><i class="fa fa-laptop"></i> <span>用户管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="blank_page.html"> Blank Page</a></li>
-                        <li><a href="boxed_view.html"> Boxed Page</a></li>
-                        <li><a href="leftmenu_collapsed_view.html"> Sidebar Collapsed</a></li>
-                        <li><a href="horizontal_menu.html"> Horizontal Menu</a></li>
-
+                        <li><a href="/users"> 用户列表</a></li>
                     </ul>
                 </li>
                 <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>商品管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="general.html"> General</a></li>
-                        <li><a href="buttons.html"> Buttons</a></li>
-                        <li><a href="tabs-accordions.html"> Tabs & Accordions</a></li>
-                        <li><a href="typography.html"> Typography</a></li>
-                        <li><a href="slider.html"> Slider</a></li>
-                        <li><a href="panels.html"> Panels</a></li>
+                        <li><a href="/goods"> 商品列表</a></li>
+                        <li><a href="/goods/new"> 新增商品</a></li>
+                        <li><a href="/goods/new"> 商品类目</a></li>
                     </ul>
                 </li>
 
                 <li class="menu-list"><a href=""><i class="fa fa-tasks"></i> <span>供应商管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="form_layouts.html"> Form Layouts</a></li>
-                        <li><a href="form_advanced_components.html"> Advanced Components</a></li>
-                        <li><a href="form_wizard.html"> Form Wizards</a></li>
-                        <li><a href="form_validation.html"> Form Validation</a></li>
-                        <li><a href="editors.html"> Editors</a></li>
-                        <li><a href="inline_editors.html"> Inline Editors</a></li>
-                        <li><a href="pickers.html"> Pickers</a></li>
-                        <li><a href="dropzone.html"> Dropzone</a></li>
-                        <li><a href="http://www.weidea.net"> More</a></li>
+                        <li><a href="/suppliers"> 供应商列表</a></li>
+                        <li><a href="/suppliers/new"> 新增供应商</a></li>
                     </ul>
                 </li>
                 <li class="menu-list"><a href=""><i class="fa fa-bar-chart-o"></i> <span>订单管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="flot_chart.html"> Flot Charts</a></li>
-                        <li><a href="morris.html"> Morris Charts</a></li>
-                        <li><a href="chartjs.html"> Chartjs</a></li>
-                        <li><a href="c3chart.html"> C3 Charts</a></li>
+                        <li><a href="/orders"> 订单列表</a></li>
                     </ul>
                 </li>
-                <li class="menu-list"><a href=""><i class="fa fa-file-text"></i> <span>内容管理</span></a>
+                <li class="menu-list"><a href="/modules"><i class="fa fa-file-text"></i> <span>内容管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="flot_chart.html">活动版块</a></li>
-                        <li><a href="flot_chart.html">广告版块</a></li>
-                        <li><a href="morris.html">招聘版块</a></li>
-                        <li><a href="chartjs.html">新闻版块</a></li>
-                        <li><a href="c3chart.html">幻灯版块</a></li>
-                        <li><a href="c3chart.html">新增版块</a></li>
+                        <li><a href="/modules/1">活动版块</a></li>
+                        <li><a href="/modules/2">广告版块</a></li>
+                        <li><a href="/modules/3">招聘版块</a></li>
+                        <li><a href="/modules/4">新闻版块</a></li>
+                        <li><a href="/modules/5">幻灯版块</a></li>
+                        <li><a href="/modules/new">新增版块</a></li>
                     </ul>
                 </li>
             </ul>
@@ -146,13 +129,14 @@
 
             <!--search start-->
             <form class="searchform" action="index.html" method="post">
-                <input type="text" class="form-control" name="keyword" placeholder="Search here..." />
+                <input type="text" class="form-control" name="keyword" placeholder=" 立即搜索 " />
             </form>
             <!--search end-->
 
             <!--notification menu start -->
             <div class="menu-right">
                 <ul class="notification-menu">
+                    <!--
                     <li>
                         <a href="#" class="btn btn-default dropdown-toggle info-number" data-toggle="dropdown">
                             <i class="fa fa-tasks"></i>
@@ -321,17 +305,17 @@
                                 <li class="new"><a href="">See All Notifications</a></li>
                             </ul>
                         </div>
-                    </li>
+                    </li>-->
                     <li>
                         <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                             <img src="/images/photos/user-avatar.png" alt="" />
-                            John Doe
+                            管理员
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
-                            <li><a href="#"><i class="fa fa-user"></i>  Profile</a></li>
-                            <li><a href="#"><i class="fa fa-cog"></i>  Settings</a></li>
-                            <li><a href="/logout"><i class="fa fa-sign-out"></i> Log Out</a></li>
+                            <li><a href="#"><i class="fa fa-user"></i> 个人信息</a></li>
+                            <li><a href="#"><i class="fa fa-cog"></i>  系统管理</a></li>
+                            <li><a href="/logout"><i class="fa fa-sign-out"></i> 退出</a></li>
                         </ul>
                     </li>
 
