--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -85,7 +85,7 @@
                     <ul class="sub-menu-list">
                         <li><a href="/goods"> 商品列表</a></li>
                         <li><a href="/goods/new"> 新增商品</a></li>
-                        <li><a href="/goods/new"> 商品类目</a></li>
+                        <li><a href="/category"> 商品类目</a></li>
                     </ul>
                 </li>
 
