--- a/views/home/index.html
+++ b/views/home/index.html
@@ -511,7 +511,7 @@
             //js/common sets the baseUrl to be js/ so
             //can just ask for 'app/main1' here instead
             //of 'js/app/main1'
-            requirejs(['app/init']);
+            requirejs(['modernizr','bootstrap', 'easypiechart','app/init']);
         });
     </script>
 
