--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -2,322 +2,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <meta name="keywords" content="admin, dashboard, bootstrap, template, flat, modern, theme, responsive, fluid, retina, backend, html5, css, css3">
-  <meta name="description" content="">
-  <meta name="author" content="ThemeBucket">
-  <link rel="shortcut icon" href="#" type="image/png">
+  {% include "./include/head.html" ignore missing %}
 
+  {% set now = '2015' %}
   <title>{% block title -%}{%- endblock %}</title>
-  {% block stylesheets -%}{%- endblock %}
 
   <!--common-->
   <link href="/css/style.css" rel="stylesheet">
   <link href="/css/style-responsive.css" rel="stylesheet">
 
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-  <script src="js/lib/html5shiv.js"></script>
-  <script src="js/lib/respond.min.js"></script>
-  <![endif]-->
+  {% block stylesheets %}{% endblock %}
+  <script src="js/lib/require.js"></script>
 </head>
 
 <body class="sticky-header">
 
 <section>
     <!-- left side start-->
-    <div class="left-side sticky-left-side">
-
-        <!--logo and iconic logo start-->
-        <div class="logo">
-            <a href="/"><img src="/images/logo.png" alt=""></a>
-        </div>
-
-        <div class="logo-icon text-center">
-            <a href="/"><img src="/images/logo_icon.png" alt=""></a>
-        </div>
-        <!--logo and iconic logo end-->
-
-        <div class="left-side-inner">
-
-            <!-- visible to small devices only -->
-            <div class="visible-xs hidden-sm hidden-md hidden-lg">
-                <div class="media logged-user">
-                    <img alt="" src="/images/photos/user-avatar.png" class="media-object">
-                    <div class="media-body">
-                        <h4><a href="#">管理员</a></h4>
-                        <span>上次登录时间: </span>
-                    </div>
-                </div>
-
-                <h5 class="left-nav-title">账户设置</h5>
-                <ul class="nav nav-pills nav-stacked custom-nav">
-                  <li><a href="#"><i class="fa fa-user"></i> <span>个人信息</span></a></li>
-                  <li><a href="#"><i class="fa fa-cog"></i> <span>设置</span></a></li>
-                  <li><a href="/logout"><i class="fa fa-sign-out"></i> <span>退出</span></a></li>
-                </ul>
-            </div>
-
-            <!--sidebar nav start-->
-            <ul class="nav nav-pills nav-stacked custom-nav">
-                <li class="active"><a href="/"><i class="fa fa-home"></i> <span>控制台</span></a></li>
-                <li class="menu-list"><a href=""><i class="fa fa-laptop"></i> <span>用户管理</span></a>
-                    <ul class="sub-menu-list">
-                        <li><a href="/users"> 用户列表</a></li>
-                    </ul>
-                </li>
-                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>商品管理</span></a>
-                    <ul class="sub-menu-list">
-                        <li><a href="/goods"> 商品列表</a></li>
-                        <li><a href="/goods/new"> 新增商品</a></li>
-                        <li><a href="/category"> 商品类目</a></li>
-                    </ul>
-                </li>
-
-                <li class="menu-list"><a href=""><i class="fa fa-tasks"></i> <span>供应商管理</span></a>
-                    <ul class="sub-menu-list">
-                        <li><a href="/suppliers"> 供应商列表</a></li>
-                        <li><a href="/suppliers/new"> 新增供应商</a></li>
-                    </ul>
-                </li>
-                <li class="menu-list"><a href=""><i class="fa fa-bar-chart-o"></i> <span>订单管理</span></a>
-                    <ul class="sub-menu-list">
-                        <li><a href="/orders"> 订单列表</a></li>
-                    </ul>
-                </li>
-                <li class="menu-list"><a href="/modules"><i class="fa fa-file-text"></i> <span>内容管理</span></a>
-                    <ul class="sub-menu-list">
-                        <li><a href="/modules/1">活动版块</a></li>
-                        <li><a href="/modules/2">广告版块</a></li>
-                        <li><a href="/modules/3">招聘版块</a></li>
-                        <li><a href="/modules/4">新闻版块</a></li>
-                        <li><a href="/modules/5">幻灯版块</a></li>
-                        <li><a href="/modules/new">新增版块</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <!--sidebar nav end-->
-
-        </div>
-    </div>
+    {% include "../components/sideNav/index.html" ignore missing %}
     <!-- left side end-->
     
     <!-- main content start-->
     <div class="main-content" >
 
         <!-- header section start-->
-        <div class="header-section">
-
-            <!--toggle button start-->
-            <a class="toggle-btn"><i class="fa fa-bars"></i></a>
-            <!--toggle button end-->
-
-            <!--search start-->
-            <form class="searchform" action="index.html" method="post">
-                <input type="text" class="form-control" name="keyword" placeholder=" 立即搜索 " />
-            </form>
-            <!--search end-->
-
-            <!--notification menu start -->
-            <div class="menu-right">
-                <ul class="notification-menu">
-                    <!--
-                    <li>
-                        <a href="#" class="btn btn-default dropdown-toggle info-number" data-toggle="dropdown">
-                            <i class="fa fa-tasks"></i>
-                            <span class="badge">8</span>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-head pull-right">
-                            <h5 class="title">You have 8 pending task</h5>
-                            <ul class="dropdown-list user-list">
-                                <li class="new">
-                                    <a href="#">
-                                        <div class="task-info">
-                                            <div>Database update</div>
-                                        </div>
-                                        <div class="progress progress-striped">
-                                            <div style="width: 40%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="40" role="progressbar" class="progress-bar progress-bar-warning">
-                                                <span class="">40%</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li class="new">
-                                    <a href="#">
-                                        <div class="task-info">
-                                            <div>Dashboard done</div>
-                                        </div>
-                                        <div class="progress progress-striped">
-                                            <div style="width: 90%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="90" role="progressbar" class="progress-bar progress-bar-success">
-                                                <span class="">90%</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <div class="task-info">
-                                            <div>Web Development</div>
-                                        </div>
-                                        <div class="progress progress-striped">
-                                            <div style="width: 66%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="66" role="progressbar" class="progress-bar progress-bar-info">
-                                                <span class="">66% </span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <div class="task-info">
-                                            <div>Mobile App</div>
-                                        </div>
-                                        <div class="progress progress-striped">
-                                            <div style="width: 33%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="33" role="progressbar" class="progress-bar progress-bar-danger">
-                                                <span class="">33% </span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <div class="task-info">
-                                            <div>Issues fixed</div>
-                                        </div>
-                                        <div class="progress progress-striped">
-                                            <div style="width: 80%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="80" role="progressbar" class="progress-bar">
-                                                <span class="">80% </span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li class="new"><a href="">See All Pending Task</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="#" class="btn btn-default dropdown-toggle info-number" data-toggle="dropdown">
-                            <i class="fa fa-envelope-o"></i>
-                            <span class="badge">5</span>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-head pull-right">
-                            <h5 class="title">You have 5 Mails </h5>
-                            <ul class="dropdown-list normal-list">
-                                <li class="new">
-                                    <a href="">
-                                        <span class="thumb"><img src="/images/photos/user1.png" alt="" /></span>
-                                        <span class="desc">
-                                          <span class="name">John Doe <span class="badge badge-success">new</span></span>
-                                          <span class="msg">Lorem ipsum dolor sit amet...</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <span class="thumb"><img src="/images/photos/user2.png" alt="" /></span>
-                                        <span class="desc">
-                                          <span class="name">Jonathan Smith</span>
-                                          <span class="msg">Lorem ipsum dolor sit amet...</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <span class="thumb"><img src="/images/photos/user3.png" alt="" /></span>
-                                        <span class="desc">
-                                          <span class="name">Jane Doe</span>
-                                          <span class="msg">Lorem ipsum dolor sit amet...</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <span class="thumb"><img src="/images/photos/user4.png" alt="" /></span>
-                                        <span class="desc">
-                                          <span class="name">Mark Henry</span>
-                                          <span class="msg">Lorem ipsum dolor sit amet...</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <span class="thumb"><img src="/images/photos/user5.png" alt="" /></span>
-                                        <span class="desc">
-                                          <span class="name">Jim Doe</span>
-                                          <span class="msg">Lorem ipsum dolor sit amet...</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li class="new"><a href="">Read All Mails</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="#" class="btn btn-default dropdown-toggle info-number" data-toggle="dropdown">
-                            <i class="fa fa-bell-o"></i>
-                            <span class="badge">4</span>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-head pull-right">
-                            <h5 class="title">Notifications</h5>
-                            <ul class="dropdown-list normal-list">
-                                <li class="new">
-                                    <a href="">
-                                        <span class="label label-danger"><i class="fa fa-bolt"></i></span>
-                                        <span class="name">Server #1 overloaded.  </span>
-                                        <em class="small">34 mins</em>
-                                    </a>
-                                </li>
-                                <li class="new">
-                                    <a href="">
-                                        <span class="label label-danger"><i class="fa fa-bolt"></i></span>
-                                        <span class="name">Server #3 overloaded.  </span>
-                                        <em class="small">1 hrs</em>
-                                    </a>
-                                </li>
-                                <li class="new">
-                                    <a href="">
-                                        <span class="label label-danger"><i class="fa fa-bolt"></i></span>
-                                        <span class="name">Server #5 overloaded.  </span>
-                                        <em class="small">4 hrs</em>
-                                    </a>
-                                </li>
-                                <li class="new">
-                                    <a href="">
-                                        <span class="label label-danger"><i class="fa fa-bolt"></i></span>
-                                        <span class="name">Server #31 overloaded.  </span>
-                                        <em class="small">4 hrs</em>
-                                    </a>
-                                </li>
-                                <li class="new"><a href="">See All Notifications</a></li>
-                            </ul>
-                        </div>
-                    </li>-->
-                    <li>
-                        <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                            <img src="/images/photos/user-avatar.png" alt="" />
-                            管理员
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
-                            <li><a href="#"><i class="fa fa-user"></i> 个人信息</a></li>
-                            <li><a href="#"><i class="fa fa-cog"></i>  系统管理</a></li>
-                            <li><a href="/logout"><i class="fa fa-sign-out"></i> 退出</a></li>
-                        </ul>
-                    </li>
-
-                </ul>
-            </div>
-            <!--notification menu end -->
-
-        </div>
+        {% include "../components/header/index.html" ignore missing %}
         <!-- header section end-->
         {% block content %}{% endblock %}
-
-
-        <footer>
-            2015-2020 &copy; 天天进货 ttjinhuo.com
-        </footer>
-        <!--footer section end-->
+        
+        {% include "./include/foot.html" ignore missing %}
     </div>
     <!-- main content end-->
 </section>
