--- a/public/views/pages/layouts/default.html
+++ b/public/views/pages/layouts/default.html
@@ -19,14 +19,14 @@
 
 <section>
     <!-- left side start-->
-    {% include "../components/sideNav/index.html" ignore missing %}
+    {% include "../../components/sideNav/index.html" ignore missing %}
     <!-- left side end-->
     
     <!-- main content start-->
     <div class="main-content" >
 
         <!-- header section start-->
-        {% include "../components/header/index.html" ignore missing %}
+        {% include "../../components/header/index.html" ignore missing %}
         <!-- header section end-->
         {% block content %}{% endblock %}
         
