--- a/public/views/components/sideNav/index.html
+++ b/public/views/components/sideNav/index.html
@@ -65,7 +65,8 @@
     </div>
 </div>
 <script>
-    requirejs(['./js/common'], function (common) {
+    requirejs(['/js/common.js'], function (common) {
+        requirejs(['comp/sideNav/index'])
         //requirejs(['modernizr','bootstrap', 'easypiechart','app/init']);
     });
 </script>
