--- a/public/views/pages/layouts/default.html
+++ b/public/views/pages/layouts/default.html
@@ -12,7 +12,7 @@
   <link href="/css/style-responsive.css" rel="stylesheet">
 
   {% block stylesheets %}{% endblock %}
-  <script src="js/lib/require.js"></script>
+  <script src="/js/lib/require.js"></script>
 </head>
 
 <body class="sticky-header">
