--- a/public/views/components/sideNav/index.html
+++ b/public/views/components/sideNav/index.html
@@ -52,6 +52,7 @@
             </li>
             <li class="menu-list"><a href="/modules"><i class="fa fa-file-text"></i> <span>内容管理</span></a>
                 <ul class="sub-menu-list">
+                    <li><a href="/modules">模块管理</a></li>
                     <li><a href="/modules/1">活动版块</a></li>
                     <li><a href="/modules/2">广告版块</a></li>
                     <li><a href="/modules/3">招聘版块</a></li>
