--- a/public/views/pages/goods/list.html
+++ b/public/views/pages/goods/list.html
@@ -2,9 +2,9 @@
 {% block content %}
 
 <!--dynamic table-->
-<link href="js/advanced-datatable/css/demo_page.css" rel="stylesheet" />
-<link href="js/advanced-datatable/css/demo_table.css" rel="stylesheet" />
-<link rel="stylesheet" href="js/data-tables/DT_bootstrap.css" />
+<link href="/js/lib/advanced-datatable/css/demo_page.css" rel="stylesheet" />
+<link href="/js/lib/advanced-datatable/css/demo_table.css" rel="stylesheet" />
+<link rel="stylesheet" href="/js/lib/data-tables/DT_bootstrap.css" />
 
 
 <!-- page heading start-->
@@ -40,7 +40,7 @@
                             </button>
                         </div>
                         <div class="btn-group pull-right">
-                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">Tools <i class="fa fa-angle-down"></i>
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">更多 <i class="fa fa-angle-down"></i>
                             </button>
                             <ul class="dropdown-menu pull-right">
                                 <li><a href="#"> 打印 </a></li>
@@ -49,8 +49,39 @@
                             </ul>
                         </div>
                     </div>
+                    <table class="table  table-hover general-table" id="userList">
+                        <thead>
+                            <tr>
+                                <th> 名称</th>
+                                <th> 品牌</th>
+                                <th> 分类</th>
+                                <th> 描述</th>
+                                <th> 图片</th>
+                                <th> 价格 / 市场价格</th>
+                                <th> 库存量</th>
+                                <th> 操作</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            
+                        </tbody>
+                    </table>
                     <hr>
-                    
+                    <div class="row-fluid">
+                        <div class="span6">
+                            <div class="dataTables_paginate paging_bootstrap pagination">
+                                <ul>
+                                    <li class="prev disabled"><a href="#">← 上一页</a></li>
+                                    <li class="active"><a href="#">1</a></li>
+                                    <li><a href="#">2</a></li>
+                                    <li><a href="#">3</a></li>
+                                    <li><a href="#">4</a></li>
+                                    <li><a href="#">5</a></li>
+                                    <li class="next"><a href="#">下一页 → </a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                     
                 </div>
             </section>
@@ -59,9 +90,11 @@
 </div>
 <!--body wrapper end-->
 <!--footer section start-->
+<script>
+    requirejs(['/js/common.js'], function (common) {
+        requirejs(['modernizr','bootstrap', 'app/goods/index'], function(a, b, goodController){
+            goodController.initList();
+        });
+    });
+</script>
 {% endblock %}
-<!--dynamic table-->
-<script type="text/javascript" language="javascript" src="js/advanced-datatable/js/jquery.dataTables.js"></script>
-<script type="text/javascript" src="js/data-tables/DT_bootstrap.js"></script>
-<!--dynamic table initialization -->
-<script src="js/dynamic_table_init.js"></script>
