修改前端控制器逻辑

--- a/public/views/pages/goods/list.html
+++ b/public/views/pages/goods/list.html
@@ -6,7 +6,7 @@
 <link href="/js/lib/advanced-datatable/css/demo_table.css" rel="stylesheet" />
 <link rel="stylesheet" href="/js/lib/data-tables/DT_bootstrap.css" />
 
-
+<div tt-controller="app/goods/index" tt-init="initList">
 <!-- page heading start-->
 <div class="page-heading">
     <h3>
@@ -112,4 +112,5 @@
         });
     });
 </script>
+</div>
 {% endblock %}
